--- a/docs/zh/advance/i18n.md
+++ b/docs/zh/advance/i18n.md
@@ -1,6 +1,6 @@
 # I18N国际化
 
-### 必要配置
+## 必要配置
 
 需要以下配置进行启用
 - [Tools.Config.props文件](/zh/advance/toolconfig)中`<AutoGenerateI18N>`为`true`
@@ -15,7 +15,7 @@
   其中`Resources.resw`文件与在`WinUI3`项目中使用方法一致
 
 
-### 生成
+## 生成
 
 在必要配置之后,生成一次项目
 
@@ -30,7 +30,7 @@
   - [`LocaleExtension`](#LocaleExtension) 用于`xaml`的本地化帮助类
 
 
-### ResourcesHelper
+## ResourcesHelper
 
 示例用法
 
@@ -39,7 +39,7 @@
 string downloadStr = ResourcesHelper.GetString(ResourceKey.Download);
 ```
 
-### I18N
+## I18N
 
 示例用法
 
@@ -53,7 +53,7 @@ string downloadStr = I18N.Download;
 
 :::
 
-### LocaleExtension
+## LocaleExtension
 
 示例用法
 
