--- a/docs/zh/advance/i18n.md
+++ b/docs/zh/advance/i18n.md
@@ -21,12 +21,10 @@
 
 会自动生成以下类:
 
-- `{项目命名空间}.Helpers`
+- `{项目命名空间}.I18n`
   - [`ResourcesHelper`](#ResourcesHelper) 读取本地化的帮助类
   - [`I18N`](#I18N) 直接返回本地化字符串的帮助类
-- `{项目命名空间}.Enums`
   - `ResourceKey` 从`resw`文件自动生成的键值
-- `{项目命名空间}.Extensions`
   - [`LocaleExtension`](#LocaleExtension) 用于`xaml`的本地化帮助类
 
 
@@ -59,7 +57,7 @@ string downloadStr = I18N.Download;
 
 `xaml`文件顶部引用命名空间
 ```
-xmlns:ex="using:ShadowViewer.Extensions"
+xmlns:ex="using:ShadowViewer.I18n"
 ```
 ```xml
 <TextBlock Text="{ex:Locale Key=Download}" />
